proxy, tls: Setup gettext in g_io_module_load().

It is required to properly show error messages on some locales.

https://bugzilla.gnome.org/show_bug.cgi?id=765466